--- a/recetas/recetas/templates/base.html
+++ b/recetas/recetas/templates/base.html
@@ -20,13 +20,37 @@
 <body>
 
     <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="{% url 'home' %}">Recetas (logo)</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">&Uacute;ltimas recetas</a>
+                </li>
+                
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'registro' %}"><button type="button" class="btn btn-outline-primary">Registro</button>
+                  </a>
+                </li>
+                
+              </ul>
+            </div>
+          </nav>
+
+
+        <!--
         <div class='container'>
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'registro' %}">Registro</a>
         </div>
+        -->
     </header>
 
-    <div class='container'>
+    <div class='container main-container'>
     {% block content %}
 
     {% endblock %}
