--- a/recetas/recetasapp/templates/registro/registro.html
+++ b/recetas/recetasapp/templates/registro/registro.html
@@ -4,6 +4,42 @@
 
 {% block content %}
 
-<h1>Registro</h1>
+<div class='col-12 col-lg-6 offset-lg-3'>
+
+    <form action= "{% url 'registro' %}" method="POST">{% csrf_token %}
+    
+
+        
+        <h1>Registro</h1>
+        <p class='text-danger'>{{ error }}</p>
+
+        <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <input type="text" class="form-control" id="nombre" name='nombre' required>
+        </div>
+        <div class="form-group">
+            <label for="apellido">Apellido</label>
+            <input type="textl" class="form-control" id="apellido" name='apellido' required>
+        </div>
+
+        <div class="form-group">
+            <label for="username">Nombre de usuario</label>
+            <input type="textl" class="form-control" id="username" name='username' required>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Correo Electrónico</label>
+          <input type="email" class="form-control" id="mail" name='email' required>
+        </div>
+        <div class="form-group">
+          <label for="password">Contraseña</label>
+          <input type="password" class="form-control" id="password" name='password' required>
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Crear cuenta</button>    
+
+    </form>
+</div>
+
 
 {% endblock %}
