--- a/recetas/recetasapp/templates/base.html
+++ b/recetas/recetasapp/templates/base.html
@@ -57,10 +57,13 @@
     </div>
 
     
+    <div>
 
     <footer>
         <a href="{% url 'contacto' %}">Contacto</a>
     </footer>
+
+    </div>
 
 </body>
 </html>
