--- a/recetas/recetasapp/static/recetas/css/main.css
+++ b/recetas/recetasapp/static/recetas/css/main.css
@@ -9,6 +9,7 @@ html {
     font-size: 30px;
     font-style: italic;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: sienna;
     
     
 }
@@ -20,7 +21,7 @@ header .navbar-nav {
 
 footer {
     position: relative;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     background-color: #444444;
     color: white;
@@ -34,8 +35,7 @@ footer a, footer a:hover {
 }
 
 .main-container {
-    padding-top: 50px;
-    position: relative;
+    padding-top: 0px;
     height: 1000px;
     
 }
