--- a/recetas/recetasapp/templates/usuario/registro.html
+++ b/recetas/recetasapp/templates/usuario/registro.html
@@ -15,21 +15,21 @@
 
         <div class="form-group">
             <label for="nombre">Nombre</label>
-            <input type="text" class="form-control" id="nombre" name='nombre' required>
+            <input type="text" class="form-control" id="nombre" name='nombre' required value="{{ nombre|default:''}}">
         </div>
         <div class="form-group">
             <label for="apellido">Apellido</label>
-            <input type="textl" class="form-control" id="apellido" name='apellido' required>
+            <input type="textl" class="form-control" id="apellido" name='apellido' required value="{{apellido|default:''}}">
         </div>
 
         <div class="form-group">
             <label for="username">Nombre de usuario</label>
-            <input type="textl" class="form-control" id="username" name='username' required>
+            <input type="textl" class="form-control" id="username" name='username' required value="{{username|default:''}}">
         </div>
 
         <div class="form-group">
           <label for="email">Correo Electrónico</label>
-          <input type="email" class="form-control" id="mail" name='email' required>
+          <input type="email" class="form-control" id="mail" name='email' required value="{{email|default:''}}">
         </div>
         <div class="form-group">
           <label for="password">Contraseña</label>
@@ -39,6 +39,8 @@
         <button type="submit" class="btn btn-primary">Crear cuenta</button>    
 
     </form>
+    <br>
+    <p>¿Ya tienes cuenta? <a href="{% url 'login' %}">Con&eacute;ctate</a></p>
 </div>
 
 
