--- a/recetas/recetasapp/templates/base.html
+++ b/recetas/recetasapp/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block titulo %}Recetas{% endblock %}</title>
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'recetas/css/main.css' %}" rel='stylesheet'>
+    <link href="{% static 'css/main.css' %}" rel='stylesheet'>
 
 
     <script src="{% static 'bootstrap/js/jquery.js' %}"></script>
@@ -56,14 +56,14 @@
     {% endblock %}
     </div>
 
+
     
-    <div>
 
     <footer>
         <a href="{% url 'contacto' %}">Contacto</a>
     </footer>
 
-    </div>
+    
 
 </body>
 </html>
