--- a/recetas/recetasapp/static/recetas/css/main.css
+++ b/recetas/recetasapp/static/recetas/css/main.css
@@ -23,7 +23,7 @@ footer {
     position: relative;
     bottom: 0px;
     width: 100%;
-    background-color: #494343;
+    background: lightgray; 
     color: white;
     padding: 10px;
 
