--- a/recetas/recetasapp/static/recetas/css/main.css
+++ b/recetas/recetasapp/static/recetas/css/main.css
@@ -1,7 +1,7 @@
 html {
     
     overflow-y: scroll;
-    height: 1000%;
+    height: 800%;
     
 }
 
@@ -9,9 +9,9 @@ html {
     font-size: 30px;
     font-style: italic;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
-    
-    
+    color: lightseagreen;
+
+     
 }
 
 header .navbar-nav {
@@ -19,11 +19,17 @@ header .navbar-nav {
     align-items: center;    
 }
 
+
+.main-container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 footer {
     position: relative;
     bottom: 0px;
     width: 100%;
-    background: lightgray; 
+    background: rgb(150, 139, 139); 
     color: white;
     padding: 10px;
 
@@ -33,12 +39,6 @@ footer a, footer a:hover {
     color: #ffffff;
     text-decoration: none;
 
-}
-
-.main-container {
-    padding-top: 50px;
-    height: 1000px;
-    
 }
 
 @media (max-width: 576px) { 
