--- a/recetas/recetasapp/templates/home.html
+++ b/recetas/recetasapp/templates/home.html
@@ -9,34 +9,6 @@
 
 <h1>Recetas</h1>
 
-<!--
-<div class="card-deck">
-
-{% for receta in recetas %}
-
-    <div class="card">
-      <img src="{{ receta.imagen.url }}" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">{{ receta.nombre }}</h5>
-        <p class="card-text">
-            <ul>
-            {% for ingrediente in receta.ingredientes.all %}
-
-                <li>{{ ingrediente.nombre }}</li>
-
-            {% endfor %}
-            </ul>
-        </p>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-    </div>
-  
-{% endfor %}
-</div>
--->
-
 
 <div class="row row-cols-1 row-cols-md-3">
     <div class="col mb-4">
@@ -47,16 +19,15 @@
         <img src="{{ receta.imagen.url }}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{ receta.nombre }}</h5>
-          <p class="card-text">
-            <ul>
+            <ul class="lista-ingredientes">
             {% for ingrediente in receta.ingredientes.all %}
 
                 <li>{{ ingrediente.nombre }}</li>
 
             {% endfor %}
             </ul>  
-          </p>
         </div>
+        <a><button class= "btn btn-primary btn-block">Ver más</button></a>
       {% endfor %}
       </div>
     </div>
