--- a/recetas/recetasapp/templates/base.html
+++ b/recetas/recetasapp/templates/base.html
@@ -21,7 +21,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand logo-text" href="{% url 'home' %}">Recetas.com</a>
+            <a class="navbar-brand logo-text text-success font-italic display-1" href="{% url 'home' %}">Recetas.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
